tests/fixtures/invalid/text-after-table.stderr
TOML parse error at line 1, column 9
  |
1 | [error] this shouldn't be here
  |         ^
Unexpected `t`
Expected `a newline` or `end of input`
While parsing a Table Header
